fix: set width 100% on cal-day-dots to prevent percentage widths from collapsing to 0

--- a/styles/calendar.css
+++ b/styles/calendar.css
@@ -130,6 +130,7 @@
 .cal-day-dots {
   display: flex;
   justify-content: center;
+  width: 100%;
 }
 
 .cal-dot {
